added SynchronizerMPI test

--- a/tests/synchronizer/Makefile
+++ b/tests/synchronizer/Makefile
@@ -3,7 +3,6 @@ SHELL := /bin/bash
 CC = mpic++
 
 precision ?= single
-hdf5precision ?= single
 nonuniform ?= no
 
 extra ?=
@@ -18,28 +17,20 @@ CFLAGS+= -Wshadow -Woverloaded-virtual -Wuninitialized
 CFLAGS+= -Wpedantic -Wno-unused-parameter # does not make much sense with function overloading
 
 
-LIBS =
-# LIBS += -L${HDF5_ROOT}/lib
-
 .PHONY: all clean
 
 $(warning using precision=$(precision))
-$(warning using hdf5precision=$(hdf5precision))
 $(warning using nonuniform=$(nonuniform))
 ifeq ("$(precision)","double")
 	CFLAGS += -D_DOUBLE_
-endif
-
-ifeq ("$(hdf5precision)","double")
-	CFLAGS += -D_HDF5_DOUBLE_PRECISION_
 endif
 
 ifeq ("$(nonuniform)","yes")
 	CFLAGS += -D_NONUNIFORM_
 endif
 
-all: testDumpsMPI.cpp
-	$(CC) $(CFLAGS) -o testDumpsMPI testDumpsMPI.cpp $(LIBS) -lhdf5
+all: testSynchronizerMPI.cpp
+	$(CC) $(CFLAGS) -o testSynchronizerMPI testSynchronizerMPI.cpp
 
 clean:
-	rm -f testDumpsMPI *.o *.h5 *.xmf *.bin *.zbin
+	rm -f testSynchronizerMPI *.o
