`Real` is now a template parameter
User app must specify `Block::Real` and `ElementType::Real`.

--- a/tests/dumpers/Makefile
+++ b/tests/dumpers/Makefile
@@ -19,7 +19,9 @@ CFLAGS+= -Wpedantic -Wno-unused-parameter # does not make much sense with functi
 
 
 LIBS =
-# LIBS += -L${HDF5_ROOT}/lib
+ifneq (${HDF5_ROOT},)
+	LIBS += -L${HDF5_ROOT}/lib
+endif
 
 .PHONY: all clean
 
